--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="icon" type="image/png" href="/gl-icon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>GL - Gamer Logbook</title>
     </head>
